--- a/index.html
+++ b/index.html
@@ -274,16 +274,18 @@
         </div>
         <div class="menu-top_menu_2-container">
             <ul id="menu-top_menu_2-1" class="menu">
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-41"><a href="https://fukokorea.co.uk/offers">Offers</a></li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
+			<a href="https://deliveroo.co.uk/menu/london/norwood/fuko-westow-hill?srsltid=AfmBOorcJQg52uoLvFBTE7yK7iMR9lVxrVzpSuVqK5vRQHDeqZuRw7ct" target="_blank">Order Online</a>
+		</li>	
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="https://fukokorea.co.uk/locations">Locations</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="https://fukokorea.co.uk/contact">Contact</a></li>
             </ul>
         </div>
-        <div class="mobile_buttons">
+       <!-- <div class="mobile_buttons">
             <a href="https://fukokorea.co.uk/fuko-moseley" target="(_blank)" class="btn btn-dark wow anim_fid animated" style="visibility: visible; animation-name: anim-fid;">delivery</a>
             <a href="https://fuko.yourorder.io/#!/home" target="(_blank)" class="btn btn-dark wow anim_fid animated" style="visibility: visible; animation-name: anim-fid;">click and collect</a>
             <a href="https://fukokorea.co.uk/#" class="btn btn-dark wow anim_fid animated" data-toggle="modal" data-target="#book_now_modal" style="visibility: visible; animation-name: anim-fid;">book now</a>
-        </div>
+        </div> -->
 
         <div class="social_row">
             <ul class="social_links">
