--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 					<div class="col links">
 						<div class="menu-top_menu_1-container">
 							<ul id="menu-top_menu_1" class="menu">
-								<li id="menu-item-38" class="fuko_about menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="https://fukokorea.co.uk/#about">about FUKO</a></li>
-								<li id="menu-item-37" class="fuko_menu menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a href="https://fukokorea.co.uk/#menu">Menu</a></li>
+								<li id="menu-item-38" class="fuko_about menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="#about">about FUKO</a></li>
+								<li id="menu-item-37" class="fuko_menu menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a href="#menu">Menu</a></li>
 							</ul>
 						</div>
 					</div>
@@ -220,8 +220,8 @@
 							<ul id="menu-top_menu_2" class="menu">
 								<li id="menu-item-41" class="fuko_offers menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
                                     <a href="https://deliveroo.co.uk/menu/london/norwood/fuko-westow-hill?srsltid=AfmBOorcJQg52uoLvFBTE7yK7iMR9lVxrVzpSuVqK5vRQHDeqZuRw7ct" target="_blank">Order Online</a></li>
-								<li id="menu-item-39" class="fuko_contact menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="https://fukokorea.co.uk/#contact">Contact</a></li>
-								<li id="menu-item-40" class="fuko_locations menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="https://fukokorea.co.uk/#locations">Locations</a></li>
+								<li id="menu-item-39" class="fuko_contact menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="#contact">Contact</a></li>
+								<li id="menu-item-40" class="fuko_locations menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="#locations">Locations</a></li>
 								<div class="col-auto order_now_div">
 									<a href="https://fukokorea.co.uk/#menu">
 										<div class="order_now" style="display:none">
@@ -268,8 +268,8 @@
     <div class="inner">
         <div class="menu-top_menu_1-container">
             <ul id="menu-top_menu_1-1" class="menu">
-                <li class="fuko_about menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="https://fukokorea.co.uk/#about">about FUKO</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a href="https://fukokorea.co.uk/#menu">Menu</a></li>
+                <li class="fuko_about menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="#about">about FUKO</a></li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a href="#menu">Menu</a></li>
             </ul>
         </div>
         <div class="menu-top_menu_2-container">
