--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
 			<a href="https://deliveroo.co.uk/menu/london/norwood/fuko-westow-hill?srsltid=AfmBOorcJQg52uoLvFBTE7yK7iMR9lVxrVzpSuVqK5vRQHDeqZuRw7ct" target="_blank">Order Online</a>
 		</li>	
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="https://fukokorea.co.uk/locations">Locations</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="https://fukokorea.co.uk/contact">Contact</a></li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="#locations">Locations</a></li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="#contact">Contact</a></li>
             </ul>
         </div>
        <!-- <div class="mobile_buttons">
@@ -1040,7 +1040,7 @@ https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js
 </div>
 <div id="">
     <div id="Opening-times" style="padding: 40px; text-align: center;background-color:#050404 ;" >
-        <h2> Restaurant Opening Times</h2>
+        <h2>Opening Times</h2><br>
             <p> Sunday  - Monday   : 11:00 AM – 9:00  PM   </p>
             <p> Tuesday - Thursday : 11:00 AM – 10:00 PM   </p>
             <p> Friday	- Saturday : 11:00 AM – 10:30 PM   </p>
