--- a/index.html
+++ b/index.html
@@ -1336,6 +1336,12 @@ https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js
   }
 }	  
   </style>
+   <script> 
+      document.addEventListener('contextmenu', function (e) {
+	      e.preventDefault();
+      });
+   </script>
+	
 </head>
 
 
