--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@ https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js
 
                     <div class="footer_info">
                         <div class="copyright">
-                           <!-- <span>Designed and Developed by <a href="https://codeintouch.com/" target="_blank">Code Intouch</a></span> -->
+                           <span>© 2025 FUKO. All rights reserved.</span>
                         </div>
                     </div>
                 </div>
