--- a/index.html
+++ b/index.html
@@ -456,19 +456,17 @@
 							<h2 class="wow anim_fid" data-wow-delay="0.5s" style="visibility: hidden; animation-delay: 0.5s; animation-name: none;">What is <span>FUKO?</span>
 							</h2>
 							<p class="subheading wow anim_fiu" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">FUKO - FUSION'D KOREA!</p>
-							<p class="text wow anim_fiu" data-wow-delay="0.7s" style="visibility: hidden; animation-delay: 0.7s; animation-name: none;">Our focus is on delivering a unique dining experience by combining the rich flavours of traditional Korean dishes with an innovative twist.
+							<p class="text wow anim_fiu" data-wow-delay="0.7s" style="visibility: hidden; animation-delay: 0.7s; animation-name: none;">At FUKO, we're redefining Korean cuisine with a bold, global twist. Our mission is simple: to deliver a fast, flavour-packed dining experience that never compromises on quality.
+								<br>
+								As a quick-service restaurant, we blend the rich traditions of Korean cooking with innovative flavours from around the world. Each dish on our menu is a celebration of culinary creativity – a fusion of classic Korean taste and global inspiration.
 								<br>
 								<br>
-								We pride ourselves on being a quick-service restaurant that doesn't compromise on quality or taste.
+								But FUKO isn’t just about great food. It’s a journey into the exciting world of Korean fusion, served with speed, style, and a smile.
+
+
 								<br>
 								<br>
-								Our menu is a testament to our commitment to culinary creativity, where each dish represents a harmonious blend of classic Korean tastes and diverse global influences.
-								<br>
-								<br>
-								At FUKO, we offer more than just food; we offer a journey through the exciting world of Korean fusion cuisine, served with speed and a smile. Join us for a meal, and discover the essence of Korea, reimagined.
-								<br>
-								<br>
-								Join our newsletter to keep upto date of our exciting expansion into London &amp; Beyond!
+								Join us for a meal and taste the essence of Korea – reimagined.
 							</p>
 							<!-- <div clas -->
 						</div>
