--- a/index.html
+++ b/index.html
@@ -722,8 +722,8 @@
                         <div id="mc_embed_signup_scroll">
                             <div class="mc-field-group">
 
-                                <input type="email" placeholder="Enter your email..." value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" required="" style="text-align: center;">
-                                <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                               <!-- <input type="email" placeholder="Enter your email..." value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" required="" style="text-align: center;">
+                                <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>-->
                             </div>
                             <div hidden="true"><input type="hidden" name="tags" value="14152541"></div>
                             <div id="mce-responses" class="clear">
@@ -734,7 +734,7 @@
                                 <input type="text" name="b_e4685e8d40d404dd67897aa25_1d46e5a81a" tabindex="-1" value="">
                             </div>
                             <div class="clear">
-                                <input type="submit" value="Join Now!" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-block btn-dark">
+                                <input type="submit" value="Coming Soon!" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-block btn-dark">
                             </div>
                         </div>
                     </form>
