--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             <div class="col-12 col-lg-6 text_box overflow_hidden">
                 
                 <h1 class="wow anim_fid" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Offers </h1>
-                <p class="big wow anim_fiu" data-wow-delay="0.5s" style="visibility: hidden; animation-delay: 0.5s; animation-name: none;">FUKO has offers on throughout the week, please visit our shop to find out what you're missing out on!</p>
+                <p class="big wow anim_fiu" data-wow-delay="0.5s" style="visibility: hidden; animation-delay: 0.5s; animation-name: none;">FUKO offers exclusive deals all week long! Visit our restaurant and discover what you’ve been missing out on.</p>
             </div>
             <div class="col-12 col-lg-6 image_right">
                 <div class="image wow anim_fiu" data-wow-delay="0.4s" data-wow-duration="2s" style="visibility: hidden; animation-duration: 2s; animation-delay: 0.4s; animation-name: none;">
@@ -579,46 +579,16 @@
         </div>
     </div>
 </div>
-<div id="">
-    <div class="offer_item" style="display: none;">
-        
-        <div class="text_box wow anim_fi animated" data-wow-delay="0.05s" style="visibility: visible; animation-delay: 0.05s; animation-name: anim-fade_in;">
-            <div class="inner_box">
-                <h4 class="heading">
-                    <span class="d-block wow anim_fid animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: anim-fid;">
-                        Special Offer </span>
-                </h4>
-                <div class="inner">
-                    <h4 class="wow anim_fiu animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: anim-fiu;"> The FUKO Family <span></span></h4>
-                    <p class="wow anim_fiu animated" data-wow-delay="0.25s" style="visibility: visible; animation-delay: 0.25s; animation-name: anim-fiu;">KOREAN LOVERS, welcome! Subscribe to our worthy nuysureta and enjoy exclusive offers and updates.<br>
-                    </p>
-                    <div class="wow anim_fiu animated" data-wow-delay="0.30s" style="visibility: visible; animation-delay: 0.3s; animation-name: anim-fiu;">
-                        <span class="price">
 
-
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="symbol wow anim_fi" data-wow-delay="0.25s"></div> -->
-            <div class="symbol"></div>
-        </div>
-
-        <div class="image_sea wow anim_fid animated" data-wow-delay="0.05s" style="visibility: visible; animation-delay: 0.05s; animation-name: anim-fid;"></div>
-    </div>
-
-   
-</div>
-</div>
-			<div id="contact" style="height: 90px"></div>
-			<div id="single_page_hero" style="margin-bottom: 40px;">
+<div id="contact" style="height: 90px"></div>
+	<div id="single_page_hero" style="margin-bottom: 40px;">
     <div class="container-big">
         <div class="row">
             <div class="col-12 col-lg-6 text_box overflow_hidden">
                 <!-- <div class="symbol wow anim_fid" data-wow-delay="0.8s"><img src="/assets/images/hero-contact-symbol.png"></div> -->
                 <h1 class="wow anim_fid" data-wow-delay="0.4s" style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">Contact</h1>
                 <!-- <p class="big wow anim_fiu" data-wow-delay="0.5s">“I AM MOST APPROPRIATELY CALLED FUKO, A CULINARY DESCENDANT OF AUTHENTIC KOREAN CUISINE!"</p> -->
-                <p class="subheading wow anim_fiu" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">Please contact us for any queries you may have &amp; we will get back to you ASAP</p>
+                <p class="subheading wow anim_fiu" data-wow-delay="0.6s" style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">Got questions? Feel free to contact us — we’ll get back to you as soon as possible!</p>
             </div>
             <div class="col-12 col-lg-6 image_right">
                 <div class="image wow anim_fiu" data-wow-delay="0.4s" data-wow-duration="2s" style="visibility: hidden; animation-duration: 2s; animation-delay: 0.4s; animation-name: none;">
