--- a/index.html
+++ b/index.html
@@ -424,16 +424,16 @@
 			
 							</div>
 			
-							<div class="" style="display: flex;">
+							<!--<div class="" style="display: flex;">
 								<img class="hero_tiger_mobile" src="./FUKO KOREA_files/hero_front.png" alt="" srcset="" width="" style="height: 100px; display: none">
-							</div>
+							</div> -->
 						</div>
-						<div class="col-12 col-md-4 col-lg-6 col-xl-7 image tiger_image_div_after">
+						<!--<div class="col-12 col-md-4 col-lg-6 col-xl-7 image tiger_image_div_after">
 							<div class="inner wow front_page_hero_animation  fuko_lion_bottom_right" style="background-image: url(&quot;/assets/images/hero_front.png&quot;); visibility: visible; animation-name: front-page-hero-image;"></div>
 						</div>
 					</div>
 					<a href="https://fukokorea.co.uk/#menu" class="fuko_menu_mobile btn btn-primary btn-lg wow anim_fiu animated" style="visibility: visible; animation-name: anim-fiu;">FUKO's Menu</a>
-				</div>
+				</div>-->
 
 			</div>
 
