--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 			"lng": -1.7177816
 		}];
 	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LTQSCEBVC7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XXXXXXXXXX');
+</script>
+
 
 <style>@-webkit-keyframes marqueeAnimation-8693082  { 100%  {transform:translateX(-1134.5px)}}</style><script src="./FUKO KOREA_files/js" async=""></script></head>
 
