--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-LTQSCEBVC7');
 </script>
 
 
