--- a/index.html
+++ b/index.html
@@ -55,15 +55,6 @@
 	<script type="text/javascript" src="./FUKO KOREA_files/jquery.marquee.min.js" id="marquee-js"></script>
 	<script type="text/javascript" src="./FUKO KOREA_files/wow.min.js" id="wow-js-js"></script>
 	<script type="text/javascript" src="./FUKO KOREA_files/app.js" id="app-js"></script>
-	<script type="text/javascript">
-		location_map_data = [{
-			"title": "Resorts World",
-			"text": "33\/34 Resorts World, Pendigo Way, Marston Green, Birmingham, B40 1PU",
-			"order_online": "",
-			"lat": 52.4481166,
-			"lng": -1.7177816
-		}];
-	</script>
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LTQSCEBVC7"></script>
 <script>
@@ -151,7 +142,7 @@
 							<ul id="menu-top_menu_1" class="menu">
 								<li id="menu-item-37" class="fuko_menu menu-item menu-item-type-post_type menu-item-object-page menu-item-37"><a href="#menu">Menu</a></li>
 								<li id="menu-item-41" class="fuko_offers menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
-                                    					<a href="https://deliveroo.co.uk/menu/london/norwood/fuko-westow-hill?srsltid=AfmBOorcJQg52uoLvFBTE7yK7iMR9lVxrVzpSuVqK5vRQHDeqZuRw7ct" target="_blank">Order Online</a></li>
+                                    					<a href="https://www.order.store/store/fuko-crystal-palace/s6zcQvOdW6SzJvoFKZPbaw" target="_blank">Order Online</a></li>
 								
 								
 							</ul>
@@ -216,7 +207,7 @@
         <div class="menu-top_menu_2-container">
             <ul id="menu-top_menu_2-1" class="menu">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
-			<a href="https://deliveroo.co.uk/menu/london/norwood/fuko-westow-hill?srsltid=AfmBOorcJQg52uoLvFBTE7yK7iMR9lVxrVzpSuVqK5vRQHDeqZuRw7ct" target="_blank">Order Online</a>
+			<a href="https://www.order.store/store/fuko-crystal-palace/s6zcQvOdW6SzJvoFKZPbaw" target="_blank">Order Online</a>
 		</li>	
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40"><a href="#locations">Locations</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39"><a href="#contact">Contact</a></li>
